chore: lang version to 11 :-(